--- a/package.json
+++ b/package.json
@@ -5,12 +5,23 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.0.0",
+    "@contentful/rich-text-types": "^15.0.0",
+    "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.8.1",
     "gatsby-image": "^3.8.0",
-    "gatsby-plugin-manifest": "^3.8.0",
+    "gatsby-plugin-hotjar": "^1.1.1",
+    "gatsby-plugin-manifest": "^3.10.0",
     "gatsby-plugin-offline": "^4.8.0",
-    "gatsby-plugin-react-helmet": "^4.8.0",
-    "gatsby-source-filesystem": "^3.8.0",
+    "gatsby-plugin-preload-fonts": "^2.10.0",
+    "gatsby-plugin-react-helmet": "^4.10.0",
+    "gatsby-plugin-robots-txt": "^1.6.8",
+    "gatsby-plugin-sitemap": "^4.6.0",
+    "gatsby-plugin-styled-components": "^4.10.0",
+    "gatsby-remark-social-cards": "^0.4.1",
+    "gatsby-source-contentful": "^5.10.0",
+    "gatsby-source-filesystem": "^3.10.0",
+    "gsap": "^3.7.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
