--- a/package.json
+++ b/package.json
@@ -11,21 +11,25 @@
     "gatsby": "^3.8.1",
     "gatsby-image": "^3.8.0",
     "gatsby-plugin-hotjar": "^1.1.1",
+    "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-manifest": "^3.10.0",
     "gatsby-plugin-offline": "^4.8.0",
     "gatsby-plugin-preload-fonts": "^2.10.0",
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-robots-txt": "^1.6.8",
+    "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-plugin-styled-components": "^4.10.0",
     "gatsby-remark-social-cards": "^0.4.1",
     "gatsby-source-contentful": "^5.10.0",
     "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-transformer-sharp": "^3.10.0",
     "gsap": "^3.7.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-share": "^4.4.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
