--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-parallax": "^3.3.0",
     "react-share": "^4.4.0",
     "styled-components": "^5.3.0"
   },
