--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-plugin-styled-components": "^4.10.0",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-remark-social-cards": "^0.4.1",
     "gatsby-source-contentful": "^5.10.0",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-sharp": "^3.10.0",
-    "gsap": "^3.7.1",
+    "gsap": "^3.8.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
