--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-plugin-styled-components": "^4.10.0",
     "gatsby-plugin-transition-link": "^1.20.5",
+    "gatsby-remark-responsive-iframe": "^5.24.0",
     "gatsby-remark-social-cards": "^0.4.1",
     "gatsby-source-contentful": "^5.10.0",
     "gatsby-source-filesystem": "^3.10.0",
